--- a/index.html
+++ b/index.html
@@ -1,199 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Klarwatt | Smart Energy Monitoring</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary: #10b981;
-            --primary-dark: #059669;
-            --bg: #030712;
-            --text: #f9fafb;
-            --text-muted: #9ca3af;
-            --glass: rgba(17, 24, 39, 0.7);
-            --glass-border: rgba(255, 255, 255, 0.1);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
-        }
-
-        body {
-            background-color: var(--bg);
-            color: var(--text);
-            overflow-x: hidden;
-            line-height: 1.6;
-        }
-
-        .hero {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            background-image: linear-gradient(to bottom, rgba(3, 7, 18, 0.5), var(--bg)), url('hero-bg.png');
-            background-size: cover;
-            background-position: center;
-            padding: 2rem;
-        }
-
-        .nav {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            padding: 1.5rem 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: var(--glass);
-            backdrop-filter: blur(12px);
-            border-bottom: 1px solid var(--glass-border);
-            z-index: 1000;
-        }
-
-        .logo {
-            font-size: 1.5rem;
-            font-weight: 800;
-            letter-spacing: -1px;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .logo span {
-            color: var(--primary);
-        }
-
-        .hero-content {
-            max-width: 800px;
-            text-align: center;
-            background: var(--glass);
-            backdrop-filter: blur(24px);
-            padding: 4rem;
-            border-radius: 2rem;
-            border: 1px solid var(--glass-border);
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
-            animation: fadeIn 1s ease-out;
-        }
-
-        h1 {
-            font-size: 4rem;
-            font-weight: 900;
-            line-height: 1.1;
-            margin-bottom: 1.5rem;
-            letter-spacing: -2px;
-        }
-
-        h1 span {
-            background: linear-gradient(to right, var(--primary), #3b82f6);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-
-        p {
-            font-size: 1.25rem;
-            color: var(--text-muted);
-            margin-bottom: 2.5rem;
-        }
-
-        .btn {
-            display: inline-block;
-            background: var(--primary);
-            color: white;
-            padding: 1rem 2.5rem;
-            border-radius: 9999px;
-            font-weight: 600;
-            text-decoration: none;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            border: 1px solid transparent;
-        }
-
-        .btn:hover {
-            background: var(--primary-dark);
-            transform: translateY(-2px);
-            box-shadow: 0 10px 20px -5px rgba(16, 185, 129, 0.4);
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .features {
-            padding: 8rem 2rem;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .feature-card {
-            background: var(--glass);
-            padding: 2.5rem;
-            border-radius: 1.5rem;
-            border: 1px solid var(--glass-border);
-            transition: all 0.3s ease;
-        }
-
-        .feature-card:hover {
-            border-color: var(--primary);
-            transform: translateY(-4px);
-        }
-
-        .feature-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-        }
-
-        @media (max-width: 768px) {
-            h1 { font-size: 2.5rem; }
-            .hero-content { padding: 2rem; }
-        }
-    </style>
-</head>
-<body>
-    <nav class="nav">
-        <div class="logo">KLAR<span>WATT</span></div>
-        <a href="https://github.com/LukasHFFB/klarwatt" class="btn" style="padding: 0.6rem 1.5rem; font-size: 0.9rem;">View Code</a>
-    </nav>
-
-    <section class="hero">
-        <div class="hero-content">
-            <h1>The Future of <span>Smart Energy</span> Monitoring</h1>
-            <p>Real-time insights for your clean energy production. Take control of your power grid with Klarwatt's enterprise-grade monitoring dashboard.</p>
-            <div style="display: flex; gap: 1rem; justify-content: center;">
-                <a href="#" class="btn">Get Started</a>
-                <a href="#" class="btn" style="background: transparent; border-color: var(--glass-border);">Learn More</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="features">
-        <div class="feature-card">
-            <h3>Real-time Analytics</h3>
-            <p>Monitor every watt produced and consumed with millisecond precision.</p>
-        </div>
-        <div class="feature-card">
-            <h3>Smart Triggers</h3>
-            <p>Automate your energy usage based on peak production times and grid tariffs.</p>
-        </div>
-        <div class="feature-card">
-            <h3>Enterprise Ready</h3>
-            <p>Scalable infrastructure designed for large-scale solar arrays and wind farms.</p>
-        </div>
-    </section>
-
-    <footer style="padding: 4rem 2rem; text-align: center; border-top: 1px solid var(--glass-border);">
-        <p>&copy; 2026 Klarwatt Energy. All rights reserved.</p>
-    </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>tmp-app</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
