--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
-<html lang="en">
-  <head>
+<!DOCTYPE html>
+<html lang="de">
+
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tmp-app</title>
-  </head>
-  <body>
+    <title>Klarwatt | Deutschlands Solar-Rechner</title>
+    <meta name="description"
+        content="Kostenlos, werbefrei und unabhängig. Finde den passenden Rechner für dein Projekt – vom Balkonkraftwerk bis zur Wärmepumpe." />
+</head>
+
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  </body>
+</body>
+
 </html>
