Fix GitHub pages routing: use HashRouter and remove broken SPA redirect hack

--- a/public/404.html
+++ b/public/404.html
@@ -3,24 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klarwatt</title>
-    <script type="text/javascript">
-        // Single Page Apps for GitHub Pages
-        // https://github.com/rafgraph/spa-github-pages
-        var pathSegmentToKeep = 0;
-
-        var l = window.location;
-        l.replace(
-            l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-            l.pathname.split('/').slice(0, 1 + pathSegmentToKeep).join('/') + '/?p=/' +
-            l.pathname.split('/').slice(1 + pathSegmentToKeep).join('/').replace(/&/g, '~and~') +
-            (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-            l.hash
-        );
-    </script>
+    <title>404 Not Found | Klarwatt</title>
 </head>
 
 <body>
+    <h1>404 Not Found</h1>
+    <p>Return to <a href="/klarwatt/">home</a>.</p>
 </body>
 
 </html>
